// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFormErrors doesn't sets an error on unknown field 1`] = `
Object {
  "questionPeriod": Object {
    "metadata": Object {
      "notExist": Object {
        "errorMessages": "Sub field does not exist",
      },
    },
    "type": "period",
  },
  "questionString": Object {
    "type": "text",
  },
}
`;

exports[`setFormErrors returns an empty object values when incorrect form type in parameter 1`] = `Object {}`;

exports[`setFormErrors returns the form with errors messages in multiple section 1`] = `
Object {
  "section1": Object {
    "questions": Object {
      "questionString": Object {
        "description": "Description de la question date",
        "title": "Question 1",
        "tooltip": "Tooltip de la question date",
        "type": "date",
      },
    },
    "title": "Section 1",
  },
  "section2": Object {
    "questions": Object {
      "questionPeriod": Object {
        "dynamic": true,
        "metadata": Object {
          "notExist": Object {
            "errorMessages": "Sub field does not exist",
          },
        },
        "title": "Question 2",
        "tooltip": "Tooltip de la question text",
        "type": "period",
      },
    },
    "title": "Section 2",
  },
}
`;

exports[`setFormErrors sets error messages on different fields 1`] = `
Object {
  "questionPeriod": Object {
    "metadata": Object {
      "from": Object {
        "errorMessages": Array [
          "Error questionPeriod 1",
          "Error questionPeriod 2",
        ],
      },
      "to": Object {
        "errorMessages": Array [
          "Error questionPeriod to 1",
          "Error questionPeriod to 2",
        ],
      },
    },
    "type": "period",
  },
  "questionString": Object {
    "metadata": Object {
      "errorMessages": Array [
        "error string 1",
        "error string 2",
      ],
    },
    "type": "text",
  },
}
`;
